Json and http finished