@@ -8,19 +8,19 @@ import javafx.scene.image.Image;
 import javafx.stage.Stage;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.http.HttpRequest.BodyPublishers;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-
 import crushers.model.Bank;
 import crushers.model.Customer;
+import crushers.model.Manager;
 import crushers.model.PaymentAccount;
 import crushers.model.SavingsAccount;
-import crushers.util.Http;
-import crushers.util.Json;
-import crushers.util.Util;
 
 public class App extends Application {
 
@@ -30,15 +30,15 @@ public class App extends Application {
 
     public static Customer currentCustomer;
 
-    static Customer emptyCustomer = new Customer("", "", "", "", "", new ArrayList<String>(List.of("test")));
+    static ArrayList<String> securityQA = new ArrayList<String>(Arrays.asList("What's the name of your first pet?", "Alfie"));
+    static Customer defaultCustomer = new Customer("John", "Smith", "Willy Street", "Smith@google.com", "Password1", securityQA);
+    static Customer emptyCustomer = new Customer("", "", "", "", "", securityQA);
+    
     @Override
     public void start(Stage stage) throws IOException {
 
         // Registering local defaults
-        ArrayList<String> securityQA = new ArrayList<String>(Arrays.asList("What's the name of your first pet?", "Alfie"));
-        Customer defaultCustomer = new Customer("John", "Smith", "Willy Street", "smith@google.com", "password", securityQA);
-        Customer emptyCustomer = new Customer("", "", "", "", "", securityQA);
-    
+        
         defaultCustomer.createAccount(new PaymentAccount("Education Fund", 0.01, crushersBank));
         defaultCustomer.createAccount(new PaymentAccount("Moolah", 7832, crushersBank));
         emptyCustomer.createAccount(new SavingsAccount("Kaylee's funds", 10, 1000, swedbank));
@@ -64,9 +64,8 @@ public class App extends Application {
         stage.show();
     }
 
-    public static void main(String[] args) {
+    public static void main(String[] args) throws IOException, InterruptedException {
         launch(args);
-        
     }
 
 }
